# nextsesh

./: .gitignore  README.md
backend/: .env.example  manage.py  pyproject.toml
backend/nextsesh/: asgi.py  settings.py  urls.py  wsgi.py
backend/scheduling/: admin.py  auth_backend.py  models.py  serializers.py  urls.py  views.py
backend/scheduling/migrations/: 0001_initial.py  0002_rename_user_appuser.py  0003_session_created_at_alter_appuser_auth0_sub.py  0004_alter_session_gym.py
frontend/: package-lock.json  package.json  svelte.config.js
frontend/src/: app.css
frontend/src/lib/: shared.svelte.ts  types.ts
frontend/src/lib/config/: auth-config.ts
frontend/src/lib/schedule/: DatePicker.svelte  ScheduleButton.svelte  SchedulingComponent.svelte  SessionCalendar.svelte
frontend/src/lib/utils/: auth-service.ts  datetime.ts
frontend/src/routes/: +layout.svelte  +page.svelte
frontend/src/routes/home/: +page.svelte
frontend/src/routes/login/callback/: +page.svelte
frontend/src/routes/schedule/: +page.svelte  +page.ts
frontend/src/stores/: auth-store.ts  gym-store.ts  session-store.ts  user-store.ts
